--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,35 @@ body {
   background: #F2F4F5;
   color: #1E1E1F;
   font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+  background-image: radial-gradient(circle, rgba(80,0,184,1) 0%, rgba(108,13,232,1) 34%, rgba(64,94,237,1) 65%, rgba(144,43,172,1) 100%);
+  background-size: 300%;
+  animation: fanimado 10s infinite;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
-
 #root {
-  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 85vh;
   position: relative;
-  min-height: 100vh;
-  max-width: 600px;
+  max-width: 500px;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 10px;
+  padding: 10px;
+  backdrop-filter: blur(1px);
 }
+@keyframes fanimado {
+  0%{
+    background-position: 0% 40%;
+  }
+  50%{
+    background-position: 100% 80%;
+  }
+  100%{
+    background-position: 0% 30%;
+  }
+};
+
